--- a/style.css
+++ b/style.css
@@ -47,11 +47,11 @@ body, html { margin: 0; padding: 0; font-family: 'Open Sans', sans-serif; backgr
 }
 
 .profile-img { width: 140px; height: 130px; border-radius: 12px; border: 3px solid var(--accent); margin-bottom: 1.5rem; }
-.tagline { font-family: 'Source Code Pro', monospace; color: var(--accent); font-weight: 600; margin: 5px 0; }
+.tagline { font-family: 'Source Code Pro', monospace; font-size: 1.5rem ; color: var(--accent); font-weight: 600; margin: 5px 0; }
 .bio { font-size: 1.1rem;; line-height: 1.6; color: #cbd5e1; }
 
 /* Contact Links */
-.contact-info p { font-size: 0.85rem; margin: 8px 0; color: #cbd5e1; }
+.contact-info p { font-size: 1rem; margin: 8px 0; color: #cbd5e1; }
 .contact-info a { color: white; text-decoration: none; font-weight: 600; }
 .contact-info a:hover { color: var(--accent); }
 
